# easyeda2kicad.py

./: README.md  pyproject.toml  setup.cfg
easyeda2kicad/: __init__.py  __main__.py  config.py  helpers.py
easyeda2kicad/easyeda/: easyeda_importer.py
easyeda2kicad/kicad/: export_kicad_3d_model.py  export_kicad_symbol.py  parameters_kicad_symbol.py
tests/: test_config.py  test_custom_fields.py  test_datasheet_fallback.py  test_footprint_link.py  test_regression.py  test_symbol_export.py
tests/reference_outputs/C2040/symbols/: test_lib.kicad_sym
tests/reference_outputs/C2838500/symbols/: test_lib.kicad_sym
tests/reference_outputs/C2843785/symbols/: test_lib.kicad_sym
tests/reference_outputs/C2856808/symbols/: test_lib.kicad_sym
tests/reference_outputs/C498560/symbols/: test_lib.kicad_sym
tests/reference_outputs/C5123977/symbols/: test_lib.kicad_sym
tests/reference_outputs/C5364646/symbols/: test_lib.kicad_sym
